--- a/GithubNemmesis/src/hibernate/ejemplos/clase/web.xml
+++ b/GithubNemmesis/src/hibernate/ejemplos/clase/web.xml
@@ -14,6 +14,9 @@
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
+    <welcome-file>menu.html</welcome-file>
+    <welcome-file>menu.htm</welcome-file>
+    <welcome-file>menu.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
     <description>Conexion a la BBDD</description>
@@ -75,8 +78,7 @@
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/LoginServlet</url-pattern>
   </servlet-mapping>
-    
-    <servlet>
+  <servlet>
     <description>Sesiones</description>
     <display-name>ServletSesiones</display-name>
     <servlet-name>ServletSesiones</servlet-name>
@@ -86,7 +88,16 @@
     <servlet-name>ServletSesiones</servlet-name>
     <url-pattern>/ServletSesiones</url-pattern>
   </servlet-mapping>
-  
+  <servlet>
+    <description>Redireccion de Servlet</description>
+    <display-name>ServletRedireccion</display-name>
+    <servlet-name>ServletRedireccion</servlet-name>
+    <servlet-class>hibernate.ejemplos.clase.ServletRedireccion</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ServletRedireccion</servlet-name>
+    <url-pattern>/ServletRedireccion</url-pattern>
+  </servlet-mapping>
   <listener>
     <listener-class>hibernate.ejemplos.clase.ServletContextListener_Prueba</listener-class>
   </listener>
@@ -102,16 +113,16 @@
   </filter>
   <filter-mapping>
     <filter-name>Filtro</filter-name>
-    <url-pattern>/NuevoPedirEmpleado</url-pattern>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <filter>
+  <!-- <filter>
     <filter-name>FiltroJDBC</filter-name>
     <filter-class>hibernate.ejemplos.clase.FiltroJDBC</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>FiltroJDBC</filter-name>
     <url-pattern>/NuevoPedirEmpleadoJDBC</url-pattern>
-  </filter-mapping>
+  </filter-mapping> -->
   <context-param>
     <param-name>contador</param-name>
     <param-value>0</param-value>
